added doc and testing
